--- a/notebooks/Music Decomposition.ipynb
+++ b/notebooks/Music Decomposition.ipynb
@@ -1,6 +1,35 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a88abab1-4ed2-4871-9205-3afaddceb9c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Halp"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
