--- a/AI/Music Decomposition/model_dev.ipynb
+++ b/AI/Music Decomposition/model_dev.ipynb
@@ -168,10 +168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "from tensorflow import keras\n",
+    "import tensorflow as tf\n",
     "import json\n",
     "from pathlib import Path\n",
     "import random\n",
@@ -192,7 +193,54 @@
    "outputs": [],
    "source": [
     "class DataManager:\n",
-    "    "
+    "    def __init__(self, data_dir, mix_no_min=2, mix_sources_no_max=4, mix_no_max=7):\n",
+    "\n",
+    "        self.data_dir = data_dir\n",
+    "        self.multimodal = False\n",
+    "        self.mix_no_min = mix_no_min\n",
+    "        self.mix_no_max = mix_no_max\n",
+    "\n",
+    "        self.n_instruments = 13\n",
+    "        self.sources = ['Bassoon', 'Cello', 'Clarinet', 'DoubleBass', 'Flute',\n",
+    "                        'Horn', 'Oboe', 'Saxophone', 'Trombone', 'Trumpet', 'Tuba', 'Viola', 'Violin']\n",
+    "\n",
+    "\n",
+    "        self.source_weights = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+    "        self.down_freq = 8000 # Downsample to this frequency\n",
+    "        self.audio_len = 48000 # No of audio samples in each 'snapshot'\n",
+    "        self.ft_window_size = 1022\n",
+    "        self.ft_hop_size = 256\n",
+    "        self.epsilon = 1e-9\n",
+    "        self.log_sample_n = 256 # TODO No idea what this does, I'll figure it out later\n",
+    "        self.segment_len = 256\n",
+    "        self.energy_predicted_sum = 1e-4\n",
+    "        self.dummy_spectrogram_size = (14, 2, 512, 256) # For tests\n",
+    "\n",
+    "        self.metadata = self._load_meta()\n",
+    "        self.window = tf.signal.hann_window(self.ft_hop_size)\n",
+    "\n",
+    "        self.data = {}\n",
+    "        self._load_data()\n",
+    "\n",
+    "        # We will be taking the results seen in papers at face value,\n",
+    "        # and using normalised linearised Fourier Transform Spectrogram, and Wiener post processing, alongside ratio masks and L2 loss\n",
+    "\n",
+    "    def increase_n_mix(self):\n",
+    "        if self.n_mix_max < self.max_sources_in_mix:\n",
+    "            self.n_mix_max += 1\n",
+    "            return True\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "    def _load_meta(self):\n",
+    "        suffix = \"*.wav\" # Audio file type\n",
+    "        meta = dict([(source, sorted(list((Path(self.data_dir) / source).glob(suffix)))) for source in self.sources])\n",
+    "        # A little hard to parse, but here we go\n",
+    "        # Makes \"meta\" a dict containing a tuple. The first element is the type of source, i.e. viola, trumpet, etc\n",
+    "        # The second is a sorted list of all files in the data directory that match the pattern of source.wav\n",
+    "\n",
+    "    def _load_data(self):\n",
+    "        pass # also todo"
    ],
    "metadata": {
     "collapsed": false,
