This is going to be painful

--- a/AI/Music Decomposition/model_dev.ipynb
+++ b/AI/Music Decomposition/model_dev.ipynb
@@ -193,12 +193,15 @@
    "outputs": [],
    "source": [
     "class DataManager:\n",
-    "    def __init__(self, data_dir, mix_no_min=2, mix_sources_no_max=4, mix_no_max=7):\n",
+    "    def __init__(self, data_dir, mix_no_min=2, training=True, mix_sources_max_no=4, mix_no_max=7, train_test_split=0.8):\n",
     "\n",
     "        self.data_dir = data_dir\n",
+    "        self.type = training\n",
     "        self.multimodal = False\n",
     "        self.mix_no_min = mix_no_min\n",
     "        self.mix_no_max = mix_no_max\n",
+    "        self.mix_sources_max_no = mix_sources_max_no\n",
+    "        self.train_test_split = train_test_split\n",
     "\n",
     "        self.n_instruments = 13\n",
     "        self.sources = ['Bassoon', 'Cello', 'Clarinet', 'DoubleBass', 'Flute',\n",
@@ -216,30 +219,46 @@
     "        self.energy_predicted_sum = 1e-4\n",
     "        self.dummy_spectrogram_size = (14, 2, 512, 256) # For tests\n",
     "\n",
-    "        self.metadata = self._load_meta()\n",
+    "        self.metadata = self.load_meta()\n",
     "        self.window = tf.signal.hann_window(self.ft_hop_size)\n",
     "\n",
     "        self.data = {}\n",
-    "        self._load_data()\n",
+    "        self.load_data()\n",
     "\n",
     "        # We will be taking the results seen in papers at face value,\n",
     "        # and using normalised linearised Fourier Transform Spectrogram, and Wiener post processing, alongside ratio masks and L2 loss\n",
     "\n",
     "    def increase_n_mix(self):\n",
-    "        if self.n_mix_max < self.max_sources_in_mix:\n",
+    "        if self.n_mix_max < self.mix_sources_max_no:\n",
     "            self.n_mix_max += 1\n",
     "            return True\n",
     "        return False\n",
     "\n",
     "\n",
-    "    def _load_meta(self):\n",
+    "    def load_meta(self):\n",
     "        suffix = \"*.wav\" # Audio file type\n",
     "        meta = dict([(source, sorted(list((Path(self.data_dir) / source).glob(suffix)))) for source in self.sources])\n",
     "        # A little hard to parse, but here we go\n",
     "        # Makes \"meta\" a dict containing a tuple. The first element is the type of source, i.e. viola, trumpet, etc\n",
     "        # The second is a sorted list of all files in the data directory that match the pattern of source.wav\n",
+    "        # (.glob is an operation that yields all file paths matching the pattern)\n",
     "\n",
-    "    def _load_data(self):\n",
+    "        for source in meta:\n",
+    "            source_len = len(meta[source])\n",
+    "            if self.type: # True means that it's training\n",
+    "                meta[source] = meta[source_len][:int(self.train_test_split * source_len)]\n",
+    "            else:\n",
+    "                meta[source] = meta[source_len][int(self.train_test_split * source_len) : source_len]\n",
+    "            # Literally just a slightly clumsy train test split\n",
+    "\n",
+    "            for path_index, path in enumerate(meta[source]):\n",
+    "                meta[source][path_idx] = (path, sf.info(path.as_posix()).frames)\n",
+    "        print(meta) # For debugging\n",
+    "\n",
+    "        return meta\n",
+    "\n",
+    "\n",
+    "    def load_data(self):\n",
     "        pass # also todo"
    ],
    "metadata": {
