In the middle of a run

--- a/AI/Music Decomposition/model_dev.ipynb
+++ b/AI/Music Decomposition/model_dev.ipynb
@@ -252,7 +252,7 @@
     "            # Literally just a slightly clumsy train test split\n",
     "\n",
     "            for path_index, path in enumerate(meta[source]):\n",
-    "                meta[source][path_idx] = (path, sf.info(path.as_posix()).frames)\n",
+    "                meta[source][path_index] = (path, sf.info(path.as_posix()).frames)\n",
     "        print(meta) # For debugging\n",
     "\n",
     "        return meta\n",
