--- a/AI/Music Decomposition/model_dev.ipynb
+++ b/AI/Music Decomposition/model_dev.ipynb
@@ -259,7 +259,20 @@
     "\n",
     "\n",
     "    def load_data(self):\n",
-    "        pass # also todo"
+    "        for source in self.metadata:\n",
+    "            temp = []\n",
+    "            for filename, length in self.metadata[source]:\n",
+    "                temp.append(tf.constant(\n",
+    "                    sf.read(filename.asposix())[0]\n",
+    "                ))\n",
+    "                print(filename.asposix()) # For debugging\n",
+    "            self.data[source] = temp.copy()\n",
+    "        print(self.data)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return 8000 if self.type == \"train\" else 2000\n",
+    "        # Literally just the size of the thing\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
