--- a/AI/Music Decomposition/model_dev.ipynb
+++ b/AI/Music Decomposition/model_dev.ipynb
@@ -272,6 +272,16 @@
     "    def __len__(self):\n",
     "        return 8000 if self.type == \"train\" else 2000\n",
     "        # Literally just the size of the thing\n",
+    "\n",
+    "    def __get_item__(self):\n",
+    "        instrument_no = random.randint(self.mix_no_min, self.mix_no_max)\n",
+    "        sources = tf.zeros((self.n_instruments, self.audio_len))\n",
+    "\n",
+    "        source_indices = np.random.choice(list(range(self.n_instruments)), size=instrument_no, replace=False,\n",
+    "                                          p=np.array(self.source_weights)/sum(self.source_weights))\n",
+    "        # Returns a randomly selected set of indices of sources, with weights given by source weights\n",
+    "\n",
+    "\n",
     "\n"
    ],
    "metadata": {
