Who wrote this, and are they in prison yet?

--- a/AI/Music Decomposition/model_dev.ipynb
+++ b/AI/Music Decomposition/model_dev.ipynb
@@ -366,7 +366,7 @@
     "            temp = []\n",
     "            for filename, length in self.metadata[source]:\n",
     "                temp.append(tf.constant(\n",
-    "                    sf.read(filename.asposix())[0]\n",
+    "                    sf.read(filename.asposix())[0] # Audio stored as a tensor, no idea if this is going to work\n",
     "                ))\n",
     "                print(filename.asposix()) # For debugging\n",
     "            self.data[source] = temp.copy()\n",
@@ -376,15 +376,37 @@
     "        return 8000 if self.type == \"train\" else 2000\n",
     "        # Literally just the size of the thing\n",
     "\n",
-    "    def __get_item__(self):\n",
+    "    def __get_item__(self): # This, if it works properly, should basically randomly mix a bunch of sources\n",
     "        instrument_no = random.randint(self.mix_no_min, self.mix_no_max)\n",
-    "        sources = tf.zeros((self.n_instruments, self.audio_len))\n",
+    "        sources = tf.zeros((self.n_instruments + 1, self.audio_len))\n",
     "\n",
     "        source_indices = np.random.choice(list(range(self.n_instruments)), size=instrument_no, replace=False,\n",
     "                                          p=np.array(self.source_weights)/sum(self.source_weights))\n",
     "        # Returns a randomly selected set of indices of sources, with weights given by source weights\n",
     "\n",
+    "        audio_output = tf.zeros(self.n_instruments)\n",
+    "        audio_source_indices = [0]\n",
     "\n",
+    "        for instrument in source_indices: # Note that instrument is an int referrering to the instrument index\n",
+    "            audio_output[instrument] = 1 # One-hot encoded record of which sources are included\n",
+    "            audio_source_indices.append(instrument) # The paper does instrument +1 here, no idea why\n",
+    "            source_in_question = self.sources[instrument] # Actual instrument\n",
+    "            sample_selected = random.randrange(len(self.data[source_in_question])) # Picks a random source for the instrument\n",
+    "            start_pos = random.randrange(len(self.data[source_in_question][instrument]) - self.audio_len)\n",
+    "\n",
+    "            sources[instrument] = self.data[source_in_question][sample_selected][start_pos:start_pos+self.audio_len]\n",
+    "\n",
+    "            smax, smin = sources[instrument].max(), sources[instrument].min()\n",
+    "            # Finds max and min values of that sample\n",
+    "            # This is basically half-assed normalisation\n",
+    "            if not np.isclose((smax - smin), [0.0]): # If smax not equals smin, basically\n",
+    "                sources[instrument] = (sources[instrument] - smin) / (smax - smin) * 2 - 1\n",
+    "            #TODO Fix this damn normalisation\n",
+    "\n",
+    "        sources[self.n_instruments+1] = sum(sources)/instrument_no # More crappy normalisation, you love to see it\n",
+    "        # It's literally the \"average loudness\", I don't know what to expect\n",
+    "\n",
+    "        return sources, audio_output, audio_source_indices\n",
     "\n"
    ],
    "metadata": {
