--- a/AI/Music Decomposition/model_dev.ipynb
+++ b/AI/Music Decomposition/model_dev.ipynb
@@ -338,7 +338,7 @@
     "\n",
     "\n",
     "    def load_meta(self):\n",
-    "        suffix = \"*.mp3\" # Audio file type\n",
+    "        suffix = \"*.wav\" # Audio file type, doesn't work on mp3\n",
     "        # Note that it's mp3 only\n",
     "        meta = dict([(source, sorted(list((Path(self.data_dir) / (source + \"_Audio\")).glob(suffix)))) for source in self.sources])\n",
     "        # A little hard to parse, but here we go\n",
