--- a/AI/Music Decomposition/model_dev.ipynb
+++ b/AI/Music Decomposition/model_dev.ipynb
@@ -251,122 +251,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "outputs": [],
    "source": [
-    "class DataManager:\n",
-    "    def __init__(self, data_dir, mix_no_min=2, training=True, mix_sources_max_no=4, mix_no_max=7, train_test_split=0.8):\n",
-    "\n",
-    "        self.data_dir = data_dir\n",
-    "        self.type = training\n",
-    "        self.multimodal = False\n",
-    "        self.mix_no_min = mix_no_min\n",
-    "        self.mix_no_max = mix_no_max\n",
-    "        self.mix_sources_max_no = mix_sources_max_no\n",
-    "        self.train_test_split = train_test_split\n",
-    "\n",
-    "        self.n_instruments = 13\n",
-    "        self.sources = ['Bassoon', 'Cello', 'Clarinet', 'DoubleBass', 'Flute',\n",
-    "                        'Horn', 'Oboe', 'Saxophone', 'Trombone', 'Trumpet', 'Tuba', 'Viola', 'Violin']\n",
-    "\n",
-    "\n",
-    "        self.source_weights = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-    "        self.down_freq = 8000 # Downsample to this frequency\n",
-    "        self.audio_len = 48000 # No of audio samples in each 'snapshot'\n",
-    "        self.ft_window_size = 1022\n",
-    "        self.ft_hop_size = 256\n",
-    "        self.epsilon = 1e-9\n",
-    "        self.log_sample_n = 256 # TODO No idea what this does, I'll figure it out later\n",
-    "        self.segment_len = 256\n",
-    "        self.energy_predicted_sum = 1e-4\n",
-    "        self.dummy_spectrogram_size = (14, 2, 512, 256) # For tests\n",
-    "\n",
-    "        self.metadata = self.load_meta()\n",
-    "        self.window = tf.signal.hann_window(self.ft_hop_size)\n",
-    "\n",
-    "        self.data = {}\n",
-    "        self.load_data()\n",
-    "\n",
-    "        # We will be taking the results seen in papers at face value,\n",
-    "        # and using normalised linearised Fourier Transform Spectrogram, and Wiener post processing, alongside ratio masks and L2 loss\n",
-    "\n",
-    "    def increase_n_mix(self):\n",
-    "        if self.mix_no_max < self.mix_sources_max_no:\n",
-    "            self.mix_no_max += 1\n",
-    "            return True\n",
-    "        return False\n",
-    "\n",
-    "\n",
-    "    def load_meta(self):\n",
-    "        suffix = \"*.wav\" # Audio file type, doesn't work on mp3\n",
-    "        # Note that it's mp3 only\n",
-    "        meta = dict([(source, sorted(list((Path(self.data_dir) / (source + \"_wav\")).glob(suffix)))) for source in self.sources])\n",
-    "        # A little hard to parse, but here we go\n",
-    "        # Makes \"meta\" a dict containing a tuple. The first element is the type of source, i.e. viola, trumpet, etc\n",
-    "        # The second is a sorted list of all files in the data directory that match the pattern of source.wav\n",
-    "        # (.glob is an operation that yields all file paths matching the pattern)\n",
-    "\n",
-    "        for source in meta:\n",
-    "            source_len = len(meta[source])\n",
-    "            if self.type: # True means that it's training\n",
-    "                meta[source] = meta[source][: int(self.train_test_split * source_len)]\n",
-    "            else:\n",
-    "                meta[source] = meta[source][int(self.train_test_split * source_len) :]\n",
-    "            # Literally just a slightly clumsy train test split\n",
-    "\n",
-    "            for path_index, path in enumerate(meta[source]):\n",
-    "                meta[source][path_index] = (path, sf.info(path).frames) # .as_posix() doesn't work on WindowsPath\n",
-    "        print(meta) # For debugging\n",
-    "\n",
-    "        return meta\n",
-    "\n",
-    "\n",
-    "    def load_data(self):\n",
-    "        for source in self.metadata:\n",
-    "            temp = []\n",
-    "            for filename, length in self.metadata[source]:\n",
-    "                temp.append(tf.constant(\n",
-    "                    sf.read(filename)[0] # Audio stored as a tensor, no idea if this is going to work\n",
-    "                ))\n",
-    "                print(filename) # For debugging\n",
-    "            self.data[source] = temp.copy()\n",
-    "        print(self.data)\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return 8000 if self.type == \"train\" else 2000\n",
-    "        # Literally just the size of the thing\n",
-    "\n",
-    "    def __getitem__(self, _): # This, if it works properly, should basically randomly mix a bunch of sources\n",
-    "        instrument_no = random.randint(self.mix_no_min, self.mix_no_max)\n",
-    "        sources = np.zeros((self.n_instruments + 1, self.audio_len))\n",
-    "\n",
-    "        source_indices = np.random.choice(list(range(self.n_instruments)), size=instrument_no, replace=False,\n",
-    "                                          p=np.array(self.source_weights)/sum(self.source_weights))\n",
-    "        # Returns a randomly selected set of indices of sources, with weights given by source weights\n",
-    "\n",
-    "        audio_output = np.zeros(self.n_instruments)\n",
-    "        audio_source_indices = [0]\n",
-    "\n",
-    "        for instrument in source_indices: # Note that instrument is an int referrering to the instrument index\n",
-    "            audio_output[instrument] = 1 # One-hot encoded record of which sources are included\n",
-    "            audio_source_indices.append(instrument) # The paper does instrument +1 here, no idea why\n",
-    "            source_in_question = self.sources[instrument] # Actual instrument\n",
-    "            sample_selected = random.randrange(len(self.data[source_in_question])) # Picks a random source for the instrument\n",
-    "            start_pos = random.randrange(len(self.data[source_in_question][instrument]) - self.audio_len)\n",
-    "\n",
-    "            sources[instrument] = self.data[source_in_question][sample_selected][start_pos:start_pos+self.audio_len]\n",
-    "\n",
-    "            smax, smin = sources[instrument].max(), sources[instrument].min()\n",
-    "            # Finds max and min values of that sample\n",
-    "            # This is basically half-assed normalisation\n",
-    "            if not np.isclose((smax - smin), [0.0]): # If smax not equals smin, basically\n",
-    "                sources[instrument] = (sources[instrument] - smin) / (smax - smin) * 2 - 1\n",
-    "            #TODO Fix this damn normalisation\n",
-    "\n",
-    "        sources[self.n_instruments+1] = sum(sources)/instrument_no # More crappy normalisation, you love to see it\n",
-    "        # It's literally the \"average loudness\", I don't know what to expect\n",
-    "\n",
-    "        return sources, audio_output, audio_source_indices\n"
+    "import os"
    ],
    "metadata": {
     "collapsed": false,
@@ -377,10 +265,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "Traceback (most recent call last):\n  File \"C:\\Users\\Vikram Ramanathan\\anaconda3\\lib\\site-packages\\tensorflow\\python\\pywrap_tensorflow.py\", line 60, in <module>\n    from tensorflow.python._pywrap_tensorflow_internal import *\nImportError: DLL load failed while importing _pywrap_tensorflow_internal: The specified module could not be found.\n\n\nFailed to load the native TensorFlow runtime.\nSee https://www.tensorflow.org/install/errors for some common causes and solutions.\nIf you need help, create an issue at https://github.com/tensorflow/tensorflow/issues and include the entire stack trace above this error message.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mImportError\u001B[0m                               Traceback (most recent call last)",
+      "\u001B[1;32m~\\anaconda3\\lib\\site-packages\\tensorflow\\python\\pywrap_tensorflow.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     59\u001B[0m   \u001B[1;32mtry\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 60\u001B[1;33m     \u001B[1;32mfrom\u001B[0m \u001B[0mtensorflow\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpython\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_pywrap_tensorflow_internal\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[1;33m*\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     61\u001B[0m   \u001B[1;31m# This try catch logic is because there is no bazel equivalent for py_extension.\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mImportError\u001B[0m: DLL load failed while importing _pywrap_tensorflow_internal: The specified module could not be found.",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001B[1;31mImportError\u001B[0m                               Traceback (most recent call last)",
+      "\u001B[1;32mC:\\Users\\VIKRAM~1\\AppData\\Local\\Temp/ipykernel_5376/4174068600.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[1;32mfrom\u001B[0m \u001B[0mmusic_decomp_data_manager\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mDataManager\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;32m~\\Documents\\GitHub\\music-decomp\\AI\\Music Decomposition\\music_decomp_data_manager.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[1;32mimport\u001B[0m \u001B[0mtensorflow\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0mtf\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      2\u001B[0m \u001B[1;32mfrom\u001B[0m \u001B[0mtensorflow\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mkeras\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mjson\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[1;32mfrom\u001B[0m \u001B[0mpathlib\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mPath\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mrandom\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\anaconda3\\lib\\site-packages\\tensorflow\\__init__.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     35\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mtyping\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0m_typing\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     36\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 37\u001B[1;33m \u001B[1;32mfrom\u001B[0m \u001B[0mtensorflow\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpython\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtools\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mmodule_util\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0m_module_util\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     38\u001B[0m \u001B[1;32mfrom\u001B[0m \u001B[0mtensorflow\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpython\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mutil\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mlazy_loader\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mLazyLoader\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0m_LazyLoader\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     39\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\anaconda3\\lib\\site-packages\\tensorflow\\python\\__init__.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     34\u001B[0m \u001B[1;31m# pylint: disable=wildcard-import,g-bad-import-order,g-import-not-at-top\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     35\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 36\u001B[1;33m \u001B[1;32mfrom\u001B[0m \u001B[0mtensorflow\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpython\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mpywrap_tensorflow\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0m_pywrap_tensorflow\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     37\u001B[0m \u001B[1;32mfrom\u001B[0m \u001B[0mtensorflow\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpython\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0meager\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mcontext\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     38\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\anaconda3\\lib\\site-packages\\tensorflow\\python\\pywrap_tensorflow.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     73\u001B[0m     \u001B[0msys\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msetdlopenflags\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0m_default_dlopen_flags\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     74\u001B[0m \u001B[1;32mexcept\u001B[0m \u001B[0mImportError\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 75\u001B[1;33m   raise ImportError(\n\u001B[0m\u001B[0;32m     76\u001B[0m       \u001B[1;34mf'{traceback.format_exc()}'\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     77\u001B[0m       \u001B[1;34mf'\\n\\nFailed to load the native TensorFlow runtime.\\n'\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mImportError\u001B[0m: Traceback (most recent call last):\n  File \"C:\\Users\\Vikram Ramanathan\\anaconda3\\lib\\site-packages\\tensorflow\\python\\pywrap_tensorflow.py\", line 60, in <module>\n    from tensorflow.python._pywrap_tensorflow_internal import *\nImportError: DLL load failed while importing _pywrap_tensorflow_internal: The specified module could not be found.\n\n\nFailed to load the native TensorFlow runtime.\nSee https://www.tensorflow.org/install/errors for some common causes and solutions.\nIf you need help, create an issue at https://github.com/tensorflow/tensorflow/issues and include the entire stack trace above this error message."
+     ]
+    }
+   ],
    "source": [
-    "import os"
+    "from music_decomp_data_manager import DataManager"
    ],
    "metadata": {
     "collapsed": false,
