--- a/AI/Music Decomposition/model_dev.ipynb
+++ b/AI/Music Decomposition/model_dev.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import os"
@@ -265,28 +265,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "Traceback (most recent call last):\n  File \"C:\\Users\\Vikram Ramanathan\\anaconda3\\lib\\site-packages\\tensorflow\\python\\pywrap_tensorflow.py\", line 60, in <module>\n    from tensorflow.python._pywrap_tensorflow_internal import *\nImportError: DLL load failed while importing _pywrap_tensorflow_internal: The specified module could not be found.\n\n\nFailed to load the native TensorFlow runtime.\nSee https://www.tensorflow.org/install/errors for some common causes and solutions.\nIf you need help, create an issue at https://github.com/tensorflow/tensorflow/issues and include the entire stack trace above this error message.",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mImportError\u001B[0m                               Traceback (most recent call last)",
-      "\u001B[1;32m~\\anaconda3\\lib\\site-packages\\tensorflow\\python\\pywrap_tensorflow.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     59\u001B[0m   \u001B[1;32mtry\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 60\u001B[1;33m     \u001B[1;32mfrom\u001B[0m \u001B[0mtensorflow\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpython\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_pywrap_tensorflow_internal\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[1;33m*\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     61\u001B[0m   \u001B[1;31m# This try catch logic is because there is no bazel equivalent for py_extension.\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mImportError\u001B[0m: DLL load failed while importing _pywrap_tensorflow_internal: The specified module could not be found.",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001B[1;31mImportError\u001B[0m                               Traceback (most recent call last)",
-      "\u001B[1;32mC:\\Users\\VIKRAM~1\\AppData\\Local\\Temp/ipykernel_5376/4174068600.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[1;32mfrom\u001B[0m \u001B[0mmusic_decomp_data_manager\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mDataManager\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[1;32m~\\Documents\\GitHub\\music-decomp\\AI\\Music Decomposition\\music_decomp_data_manager.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[1;32mimport\u001B[0m \u001B[0mtensorflow\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0mtf\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      2\u001B[0m \u001B[1;32mfrom\u001B[0m \u001B[0mtensorflow\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mkeras\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mjson\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[1;32mfrom\u001B[0m \u001B[0mpathlib\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mPath\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mrandom\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\anaconda3\\lib\\site-packages\\tensorflow\\__init__.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     35\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mtyping\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0m_typing\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     36\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 37\u001B[1;33m \u001B[1;32mfrom\u001B[0m \u001B[0mtensorflow\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpython\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtools\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mmodule_util\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0m_module_util\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     38\u001B[0m \u001B[1;32mfrom\u001B[0m \u001B[0mtensorflow\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpython\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mutil\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mlazy_loader\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mLazyLoader\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0m_LazyLoader\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     39\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\anaconda3\\lib\\site-packages\\tensorflow\\python\\__init__.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     34\u001B[0m \u001B[1;31m# pylint: disable=wildcard-import,g-bad-import-order,g-import-not-at-top\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     35\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 36\u001B[1;33m \u001B[1;32mfrom\u001B[0m \u001B[0mtensorflow\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpython\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mpywrap_tensorflow\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0m_pywrap_tensorflow\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     37\u001B[0m \u001B[1;32mfrom\u001B[0m \u001B[0mtensorflow\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpython\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0meager\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mcontext\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     38\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\anaconda3\\lib\\site-packages\\tensorflow\\python\\pywrap_tensorflow.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     73\u001B[0m     \u001B[0msys\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msetdlopenflags\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0m_default_dlopen_flags\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     74\u001B[0m \u001B[1;32mexcept\u001B[0m \u001B[0mImportError\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 75\u001B[1;33m   raise ImportError(\n\u001B[0m\u001B[0;32m     76\u001B[0m       \u001B[1;34mf'{traceback.format_exc()}'\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     77\u001B[0m       \u001B[1;34mf'\\n\\nFailed to load the native TensorFlow runtime.\\n'\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mImportError\u001B[0m: Traceback (most recent call last):\n  File \"C:\\Users\\Vikram Ramanathan\\anaconda3\\lib\\site-packages\\tensorflow\\python\\pywrap_tensorflow.py\", line 60, in <module>\n    from tensorflow.python._pywrap_tensorflow_internal import *\nImportError: DLL load failed while importing _pywrap_tensorflow_internal: The specified module could not be found.\n\n\nFailed to load the native TensorFlow runtime.\nSee https://www.tensorflow.org/install/errors for some common causes and solutions.\nIf you need help, create an issue at https://github.com/tensorflow/tensorflow/issues and include the entire stack trace above this error message."
-     ]
-    }
-   ],
+   "execution_count": 4,
+   "outputs": [],
    "source": [
     "from music_decomp_data_manager import DataManager"
    ],
@@ -299,13 +279,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "'C:\\\\Users\\\\User\\\\Documents\\\\GitHub\\\\music-decomp\\\\Solos-Files\\\\data_files\\\\audio_wav'"
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -1202,19 +1182,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [],
+   "source": [
+    "def fixed_getitem(self, _):  # This, if it works properly, should basically randomly mix a bunch of sources\n",
+    "    instrument_no = random.randint(self.mix_no_min, self.mix_no_max)\n",
+    "    sources = np.zeros((self.n_instruments + 1, self.audio_len))\n",
+    "\n",
+    "    source_indices = np.random.choice(list(range(self.n_instruments)), size=instrument_no, replace=False,\n",
+    "                                          p=np.array(self.source_weights) / sum(self.source_weights))\n",
+    "    print(source_indices)\n",
+    "    # Returns a randomly selected set of indices of sources, with weights given by source weights\n",
+    "\n",
+    "    audio_output = np.zeros(self.n_instruments) # This does not include the extra term below\n",
+    "    audio_source_indices = [self.n_instruments] # This, however, always includes an extra term, that being the average of all inputs\n",
+    "\n",
+    "    for instrument in source_indices:  # Note that instrument is an int referring to the instrument index\n",
+    "        audio_output[instrument - 1] = 1  # One-hot encoded record of which sources are included\n",
+    "        audio_source_indices.append(instrument)  # The paper does instrument +1 here, no idea why\n",
+    "        source_in_question = self.sources[instrument]  # Actual instrument\n",
+    "        sample_selected = random.randrange(0, len(self.data[source_in_question]))  # Picks a random source for the instrument\n",
+    "\n",
+    "        start_pos = random.randrange(0, len(self.data[source_in_question][sample_selected]) - self.audio_len)\n",
+    "        sources[instrument] = self.data[source_in_question][sample_selected][start_pos:start_pos + self.audio_len]\n",
+    "\n",
+    "        smax, smin = sources[instrument].max(), sources[instrument].min()\n",
+    "        # Finds max and min values of that sample\n",
+    "        # This is basically half-assed normalisation\n",
+    "        if not np.isclose((smax - smin), [0.0]):  # If smax not equals smin, basically\n",
+    "            sources[instrument] = (sources[instrument] - smin) / (smax - smin) * 2 - 1\n",
+    "        # TODO Fix this damn normalisation\n",
+    "\n",
+    "    sources[self.n_instruments] = sum(sources) / instrument_no\n",
+    "    # More crappy normalisation, you love to see it\n",
+    "    # It's literally the \"average loudness\", I don't know what to expect\n",
+    "\n",
+    "    return sources, audio_output, audio_source_indices"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [],
+   "source": [
+    "DataManager.__getitem__ = fixed_getitem"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'tensorflow.python.framework.ops.EagerTensor' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_656180\\2733649550.py\u001B[0m in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mdm\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m__get_item__\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_656180\\1758301497.py\u001B[0m in \u001B[0;36m__get_item__\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m     93\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     94\u001B[0m         \u001B[1;32mfor\u001B[0m \u001B[0minstrument\u001B[0m \u001B[1;32min\u001B[0m \u001B[0msource_indices\u001B[0m\u001B[1;33m:\u001B[0m \u001B[1;31m# Note that instrument is an int referrering to the instrument index\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 95\u001B[1;33m             \u001B[0maudio_output\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0minstrument\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;36m1\u001B[0m \u001B[1;31m# One-hot encoded record of which sources are included\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     96\u001B[0m             \u001B[0maudio_source_indices\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0minstrument\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m# The paper does instrument +1 here, no idea why\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     97\u001B[0m             \u001B[0msource_in_question\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msources\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0minstrument\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;31m# Actual instrument\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mTypeError\u001B[0m: 'tensorflow.python.framework.ops.EagerTensor' object does not support item assignment"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 6  7 12  2]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "(array([[ 0.        ,  0.        ,  0.        , ...,  0.        ,\n          0.        ,  0.        ],\n        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n          0.        ,  0.        ],\n        [ 0.35877084,  0.29042746,  0.25351439, ..., -0.16183737,\n         -0.19014376, -0.17943323],\n        ...,\n        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n          0.        ,  0.        ],\n        [-0.24402609, -0.1150244 , -0.03473001, ...,  0.30483125,\n          0.21578723, -0.08839648],\n        [ 0.01063887,  0.02405176,  0.03909537, ...,  0.0806464 ,\n          0.05237645, -0.0113895 ]]),\n array([0., 1., 0., 0., 0., 1., 1., 0., 0., 0., 0., 1., 0., 0.]),\n [13, 6, 7, 12, 2])"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
