Training Set Up, just need to format data properly for training/testing

--- a/AI/Sheet Music/keras_copied.ipynb
+++ b/AI/Sheet Music/keras_copied.ipynb
@@ -282,14 +282,13 @@
    "source": [
     "class Decoder(tf.keras.layers.Layer):\n",
     "    \n",
-    "    def __init__(self,*, num_layers, d_model, num_heads, dff, target_vocab_size,\n",
+    "    def __init__(self,*, num_layers, d_model, num_heads, dff,\n",
     "                rate=0.1):\n",
     "        super(Decoder, self).__init__()\n",
     "\n",
     "        self.d_model = d_model\n",
     "        self.num_layers = num_layers\n",
     "\n",
-    "        self.embedding = tf.keras.layers.Embedding(target_vocab_size, d_model)\n",
     "        self.pos_encoding = positional_encoding(MAX_TOKENS, d_model)\n",
     "\n",
     "        self.dec_layers = [\n",
@@ -416,13 +415,11 @@
    "outputs": [],
    "source": [
     "transformer = Transformer(\n",
-    "    num_layers=num_layers,\n",
-    "    d_model=d_model,\n",
-    "    num_heads=num_heads,\n",
-    "    dff=dff,\n",
-    "    input_vocab_size=tokenizers.pt.get_vocab_size().numpy(),\n",
-    "    target_vocab_size=tokenizers.en.get_vocab_size().numpy(),\n",
-    "    rate=dropout_rate\n",
+    "    num_layers = 4,\n",
+    "    d_model = 84,\n",
+    "    num_heads = 8,\n",
+    "    dff = 512,\n",
+    "    rate= 0.1\n",
     ")"
    ]
   },
@@ -463,7 +460,6 @@
     "]\n",
     "\n",
     "@tf.function(input_signature=train_step_signature)\n",
-    "\n",
     "def train_step(inp, tar):\n",
     "    tar_inp = tar[:, :-1]\n",
     "    tar_real = tar[:, 1:]\n",
@@ -486,26 +482,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for epoch in range(EPOCHS):\n",
+    "\n",
+    "for batch in range(45):\n",
     "    start = time.time()\n",
     "\n",
     "    train_loss.reset_states()\n",
     "    train_accuracy.reset_states()\n",
     "\n",
-    "    # inp -> portuguese, tar -> english\n",
-    "    for (batch, (inp, tar)) in enumerate(train_batches):\n",
-    "        train_step(inp, tar)\n",
+    "    # Performs Constant-Q Transform for input\n",
+    "    inp = np.abs(librosa.cqt(audio))\n",
+    "    \n",
+    "    # Somehow gets the target output\n",
+    "    tar = \"magic\"\n",
     "\n",
-    "        if batch % 50 == 0:\n",
-    "        print(f'Epoch {epoch + 1} Batch {batch} Loss {train_loss.result():.4f} Accuracy {train_accuracy.result():.4f}')\n",
+    "    train_step(inp, tar)\n",
     "\n",
-    "    if (epoch + 1) % 5 == 0:\n",
-    "        ckpt_save_path = ckpt_manager.save()\n",
-    "        print(f'Saving checkpoint for epoch {epoch+1} at {ckpt_save_path}')\n",
+    "    if batch % 50 == 0:\n",
+    "        print(f'File {} Batch {batch} Loss {train_loss.result():.4f} Accuracy {train_accuracy.result():.4f}')\n",
     "\n",
-    "    print(f'Epoch {epoch + 1} Loss {train_loss.result():.4f} Accuracy {train_accuracy.result():.4f}')\n",
+    "if (epoch + 1) % 5 == 0:\n",
+    "    ckpt_save_path = ckpt_manager.save()\n",
+    "    print(f'Saving checkpoint for epoch {epoch+1} at {ckpt_save_path}')\n",
     "\n",
-    "    print(f'Time taken for 1 epoch: {time.time() - start:.2f} secs\\n')"
+    "print(f'Epoch {epoch + 1} Loss {train_loss.result():.4f} Accuracy {train_accuracy.result():.4f}')\n",
+    "\n",
+    "print(f'Time taken for 1 epoch: {time.time() - start:.2f} secs\\n')"
    ]
   }
  ],
