This is atrocious

--- a/AI/Music Decomposition/model_dev.ipynb
+++ b/AI/Music Decomposition/model_dev.ipynb
@@ -1191,7 +1191,6 @@
     "\n",
     "    source_indices = np.random.choice(list(range(self.n_instruments)), size=instrument_no, replace=False,\n",
     "                                          p=np.array(self.source_weights) / sum(self.source_weights))\n",
-    "    print(source_indices)\n",
     "    # Returns a randomly selected set of indices of sources, with weights given by source weights\n",
     "\n",
     "    audio_output = np.zeros(self.n_instruments) # This does not include the extra term below\n",
@@ -1214,12 +1213,41 @@
     "        # TODO Fix this damn normalisation\n",
     "\n",
     "    sources[self.n_instruments] = sum(sources) / instrument_no\n",
-    "    # More crappy normalisation, you love to see it\n",
-    "    # It's literally the \"average loudness\", I don't know what to expect\n",
+    "    # Smushed waveforms, you can just do that with wav, it turns out\n",
     "\n",
     "    #Note that audio_output is 0 indexed\n",
     "\n",
     "    return sources, audio_output, audio_source_indices"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 6  8  4  0 12  1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "[13, 6, 8, 4, 0, 12, 1]"
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dm[0][2]"
    ],
    "metadata": {
     "collapsed": false,
@@ -1250,12 +1278,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 8  9  4 12  1]\n"
+      "[ 4  6 11  3  9  7]\n"
      ]
     },
     {
      "data": {
-      "text/plain": "(array([[ 0.        ,  0.        ,  0.        , ...,  0.        ,\n          0.        ,  0.        ],\n        [ 0.0199355 , -0.01846966, -0.09205512, ...,  0.03913808,\n          0.06185869,  0.08970976],\n        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n          0.        ,  0.        ],\n        ...,\n        [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n          0.        ,  0.        ],\n        [-0.15855246, -0.14537881, -0.13975527, ..., -0.10429576,\n         -0.13506899, -0.15407446],\n        [ 0.30925942,  0.28437078,  0.2446396 , ..., -0.25783614,\n         -0.26872428, -0.25462437]]),\n array([0., 1., 0., 0., 1., 0., 0., 0., 1., 1., 0., 0., 1.]),\n [13, 8, 9, 4, 12, 1])"
+      "text/plain": "(14, 48000)"
      },
      "execution_count": 42,
      "metadata": {},
@@ -1263,7 +1291,7 @@
     }
    ],
    "source": [
-    "dm[0] # Actual index of item is irrelevant, I just want to call getitem"
+    "dm[0][0].shape # Actual index of item is irrelevant, I just want to call getitem"
    ],
    "metadata": {
     "collapsed": false,
@@ -1274,19 +1302,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
+   "outputs": [],
+   "source": [
+    "dummy_array = np.zeros((64, 14, 256, 512, 2))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "outputs": [
     {
      "data": {
-      "text/plain": "<music_decomp_data_manager.DataManager at 0x10c96402340>"
+      "text/plain": "(64, 1, 256, 512, 2)"
      },
-     "execution_count": 32,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dm"
+    "dummy_array[:,:13,:,:,:].shape"
    ],
    "metadata": {
     "collapsed": false,
