Some cleaning up

--- a/AI/Sheet Music/model.ipynb
+++ b/AI/Sheet Music/model.ipynb
@@ -321,7 +321,7 @@
     "    \n",
     "    def call(self, x, enc_output, training,\n",
     "            look_ahead_mask, padding_mask):\n",
-    "\n",
+    "            \n",
     "        seq_len = tf.shape(x)[1]\n",
     "        attention_weights = {}\n",
     "\n",
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,6 +375,7 @@
     "\n",
     "    \n",
     "    def create_masks(self, inp, tar):\n",
+    "        return None, None, None\n",
     "        # Encoder padding mask\n",
     "        enc_padding_mask = create_padding_mask(inp)\n",
     "\n",
@@ -425,21 +426,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "build() missing 1 required positional argument: 'input_shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\yuanx\\Documents\\GitHub\\music-decomp\\AI\\Sheet Music\\keras_copied.ipynb Cell 14'\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/yuanx/Documents/GitHub/music-decomp/AI/Sheet%20Music/keras_copied.ipynb#ch0000012?line=0'>1</a>\u001b[0m \u001b[39m# Transformer Model\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/yuanx/Documents/GitHub/music-decomp/AI/Sheet%20Music/keras_copied.ipynb#ch0000012?line=1'>2</a>\u001b[0m transformer \u001b[39m=\u001b[39m Transformer(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/yuanx/Documents/GitHub/music-decomp/AI/Sheet%20Music/keras_copied.ipynb#ch0000012?line=2'>3</a>\u001b[0m     num_layers \u001b[39m=\u001b[39m \u001b[39m4\u001b[39m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/yuanx/Documents/GitHub/music-decomp/AI/Sheet%20Music/keras_copied.ipynb#ch0000012?line=3'>4</a>\u001b[0m     d_model \u001b[39m=\u001b[39m \u001b[39m84\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/yuanx/Documents/GitHub/music-decomp/AI/Sheet%20Music/keras_copied.ipynb#ch0000012?line=6'>7</a>\u001b[0m     rate\u001b[39m=\u001b[39m \u001b[39m0.1\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/yuanx/Documents/GitHub/music-decomp/AI/Sheet%20Music/keras_copied.ipynb#ch0000012?line=7'>8</a>\u001b[0m )\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/yuanx/Documents/GitHub/music-decomp/AI/Sheet%20Music/keras_copied.ipynb#ch0000012?line=9'>10</a>\u001b[0m transformer\u001b[39m.\u001b[39;49mbuild()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/yuanx/Documents/GitHub/music-decomp/AI/Sheet%20Music/keras_copied.ipynb#ch0000012?line=10'>11</a>\u001b[0m transformer\u001b[39m.\u001b[39msummary()\n",
-      "\u001b[1;31mTypeError\u001b[0m: build() missing 1 required positional argument: 'input_shape'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Transformer Model\n",
     "transformer = Transformer(\n",
@@ -453,11 +442,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Custom Learning Rate\n",
     "learning_rate = CustomSchedule(84)\n",
     "\n",
@@ -471,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +501,8 @@
     "    with tf.GradientTape() as tape:\n",
     "        predictions, _ = transformer([inp, tar_inp],\n",
     "                                    training = True)\n",
-    "        loss = loss_function(tar_real, predictions)\n",
+    "                                    \n",
+    "        loss = loss_function(tar_real, tf.transpose(predictions[0]))\n",
     "\n",
     "    gradients = tape.gradient(loss, transformer.trainable_variables)\n",
     "    optimizer.apply_gradients(zip(gradients, transformer.trainable_variables))\n",
@@ -524,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,9 +545,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "loss_object = tf.keras.losses.CategoricalCrossentropy(reduction='none')\n",
+    "\n",
+    "def loss_function(real, pred):\n",
+    "    mask = tf.math.logical_not(tf.math.equal(real, 0))\n",
+    "    loss_ = loss_object(real, pred)\n",
+    "    mask = tf.cast(mask, dtype=tf.float32)\n",
+    "    \n",
+    "    return tf.reduce_sum(loss_)/tf.reduce_sum(mask)\n",
+    "\n",
+    "\n",
+    "def accuracy_function(real, pred):\n",
+    "    accuracies = tf.equal(real, tf.argmax(pred, axis=2))\n",
+    "\n",
+    "    mask = tf.math.logical_not(tf.math.equal(real, 0))\n",
+    "    accuracies = tf.math.logical_and(mask, accuracies)\n",
+    "\n",
+    "    accuracies = tf.cast(accuracies, dtype=tf.float32)\n",
+    "    mask = tf.cast(mask, dtype=tf.float32)\n",
+    "    return tf.reduce_sum(accuracies)/tf.reduce_sum(mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 1: Loss 9.5051 Accuracy 0.0058\n",
+      "File 2: Loss 9.0124 Accuracy 0.0012\n",
+      "File 3: Loss 9.4746 Accuracy 0.0003\n",
+      "File 4: Loss 8.8002 Accuracy 0.0003\n",
+      "File 5: Loss 9.7214 Accuracy 0.0005\n",
+      "Saving checkpoint at ./checkpoints/train\\ckpt-1\n"
+     ]
+    }
+   ],
    "source": [
     "trainfiles = open(\"../../musicnet/lst.txt\").readlines()\n",
     "\n",
